# switch-bt-ws

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  entrypoint.sh
.cargo/: config.toml
.github/workflows/: release.yml
csrc/: BTSTACK_LICENSE.txt  THIRD_PARTY_LICENSES.txt  app.rc  btkeyLib.c  btstack_platform.c  btstack_stub.c
patches/: apply_patches.sh
scripts/: gen_licenses.sh
src/: api.rs  btstack.rs  controller.rs  driver.rs  gamepad.rs  global_ws.rs  ipc.rs  main.rs  protocol.rs  worker.rs  ws_server.rs
