[package]
name = "switch-bt-ws"
version = "0.1.0"
edition = "2021"
description = "Nintendo Switch Pro Controller emulator via Bluetooth, controlled over WebSocket"

[[bin]]
name = "switch-bt-ws"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# axum 0.7 includes built-in WebSocket support
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
# Windows API access for driver enumeration (SetupAPI etc.)
windows-sys = { version = "0.52", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Devices_Usb",
] }

[build-dependencies]
cc = "1"
glob = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
